--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -159,6 +159,7 @@ set(TEST_SOURCES_C
   arm/neon/qtbl.c
   arm/neon/qtbx.c
   arm/neon/reinterpret.c
+  arm/neon/rev64.c
   arm/neon/rhadd.c
   arm/neon/rshl.c
   arm/neon/rshr_n.c
