neon: Add rev64 with vrev64* intrinsics
vrev64_f16 and vrev64q_f16 are omitted as SIMDe has no 16-bit
floating point support.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -158,6 +158,7 @@ set(TEST_SOURCES_C
   arm/neon/qmovn_high.c
   arm/neon/qtbl.c
   arm/neon/reinterpret.c
+  arm/neon/rev64.c
   arm/neon/rhadd.c
   arm/neon/rshl.c
   arm/neon/rshr_n.c
