neon: implementation of qrdmulh
Bundled in here there's a few erroneous commits, I ran into an
overflow bug, which I fixed in this verision.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -154,6 +154,8 @@ set(TEST_SOURCES_C
   arm/neon/qadd.c
   arm/neon/qdmulh.c
   arm/neon/qdmull.c
+  arm/neon/qrdmulh.c
+  arm/neon/qrdmulh_n.c
   arm/neon/qmovn.c
   arm/neon/qmovn_high.c
   arm/neon/qtbl.c
