neon: Add rev16 with vrev16{,q}_[su]8 intrinsics

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -161,6 +161,7 @@ set(TEST_SOURCES_C
   arm/neon/qtbl.c
   arm/neon/qtbx.c
   arm/neon/reinterpret.c
+  arm/neon/rev16.c
   arm/neon/rev64.c
   arm/neon/rhadd.c
   arm/neon/rshl.c
