neon: implement cvt
Fixes #525

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -125,6 +125,7 @@ set(TEST_SOURCES_C
   arm/neon/clez.c
   arm/neon/clt.c
   arm/neon/cltz.c
+  arm/neon/cvt.c
   arm/neon/combine.c
   arm/neon/create.c
   arm/neon/dot.c
