neon: implement qmovun
Fixes #526

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -161,6 +161,7 @@ set(TEST_SOURCES_C
   arm/neon/qrdmulh_n.c
   arm/neon/qmovn.c
   arm/neon/qmovn_high.c
+  arm/neon/qmovun.c
   arm/neon/qtbl.c
   arm/neon/qtbx.c
   arm/neon/reinterpret.c
