--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,37 @@ jobs:
       with:
         file: ./build/meson-logs/coverage.xml
 
+  gcc:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: ["10", "9", "8", "7"]
+    env:
+      CC: gcc-${{ matrix.version }}
+      CXX: g++-${{ matrix.version }}
+      CFLAGS: -Wall -Wextra -Werror -march=native
+      CXXFLAGS: -Wall -Wextra -Werror -march=native
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: recursive
+    - name: Install APT Dependencies
+      run: sudo add-apt-repository 'ppa:ubuntu-toolchain-r/test' && sudo apt-get update && sudo apt-get install -y ninja-build ninja-build python3-pip python3-setuptools python3-wheel parallel gcovr gcc-${{ matrix.version }} g++-${{ matrix.version }}
+    - name: Install pip Dependencies
+      run: pip3 install meson
+    - name: Configure
+      run: ~/.local/bin/meson setup build -Db_coverage=true
+    - name: Build
+      run: ninja -C build -v
+    - name: Test
+      run: ninja -C build -v test
+    - name: Coverage Report
+      run: ninja -C build -v coverage-xml
+    - name: CodeCov.io
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./build/meson-logs/coverage.xml
+
   SDE:
     runs-on: ubuntu-latest
     strategy:
