--- a/test/x86/meson.build
+++ b/test/x86/meson.build
@@ -21,28 +21,29 @@ simde_test_x86_tests = [
 simde_test_x86_sources = []
 simde_test_x86_libs = []
 foreach name : simde_test_x86_tests
-  c_source = name + '.c'
-  cpp_source = configure_file(input: name + '.c', output: name + '.cpp', copy: true)
-  simde_test_x86_sources += [c_source, cpp_source]
+  foreach lang : ['c', 'cpp']
+    source_file = name + '.c'
+    if lang == 'cpp'
+      source_file = configure_file(input: name + '.c', output: name + '.cpp', copy: true)
+    endif
+    simde_test_x86_sources += source_file
 
-  test('x86/' + name + '/emul/c', executable(name + '-emul-c', c_source,
-      c_args: simde_c_args + simde_c_defs + simde_native_c_flags + ['-DSIMDE_NO_NATIVE', '-DSIMDE_TEST_BARE'],
-      include_directories: simde_include_dir,
-      dependencies: simde_deps),
-    protocol: 'tap')
-  test('x86/' + name + '/emul/cpp', executable(name + '-emul-cpp', cpp_source,
-      cpp_args: simde_c_args + simde_c_defs + simde_native_c_flags + ['-DSIMDE_NO_NATIVE', '-DSIMDE_TEST_BARE'],
-      include_directories: simde_include_dir,
-      dependencies: simde_deps),
-    protocol: 'tap')
-  test('x86/' + name + '/native/c', executable(name + '-native-c', c_source,
-      c_args: simde_c_args + simde_c_defs + simde_native_c_flags + ['-DSIMDE_TEST_BARE'],
-      include_directories: simde_include_dir,
-      dependencies: simde_deps),
-    protocol: 'tap')
-  test('x86/' + name + '/native/cpp', executable(name + '-native-cpp', cpp_source,
-      cpp_args: simde_c_args + simde_c_defs + simde_native_c_flags + ['-DSIMDE_TEST_BARE'],
-      include_directories: simde_include_dir,
-      dependencies: simde_deps),
-    protocol: 'tap')
+    foreach emul : ['emul', 'native']
+      extra_flags = ['-DSIMDE_TEST_BARE']
+      if emul == 'emul'
+        extra_flags += '-DSIMDE_NO_NATIVE'
+      endif
+
+      x = executable(name + '-' + emul +  '-' + lang, source_file,
+          c_args: simde_c_args + simde_c_defs + simde_native_c_flags + extra_flags,
+          cpp_args: simde_c_args + simde_c_defs + simde_native_c_flags + extra_flags,
+          include_directories: simde_include_dir,
+          dependencies: simde_deps)
+
+      test('x86/' + name + '/' + emul + '/' + lang, x,
+          protocol: 'tap',
+          # Emscripten tests must be run from builddir
+          workdir: meson.current_build_dir())
+    endforeach
+  endforeach
 endforeach
