--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -45,7 +45,7 @@ jobs:
     - run: |
        sudo add-apt-repository 'ppa:ubuntu-toolchain-r/test' && sudo apt-get update && sudo apt-get install -y ninja-build ninja-build python3-pip python3-setuptools python3-wheel gcc-10 g++-10
        pip3 install meson
-       $HOME/.local/bin/meson setup build -Db_sanitize=address,undefined
+       $HOME/.local/bin/meson setup build
        ninja -C build -v
        ninja -C build -v test
 
