--- a/meson.build
+++ b/meson.build
@@ -199,6 +199,7 @@ if not meson.is_subproject()
       'simde/check.h',
       'simde/debug-trap.h',
       'simde/hedley.h',
+      'simde/simde-align.h',
       'simde/simde-arch.h',
       'simde/simde-common.h',
       'simde/simde-constify.h',
