neon/abdl: initial implementation

--- a/meson.build
+++ b/meson.build
@@ -7,7 +7,9 @@ cc = meson.get_compiler('c')
 cxx = meson.get_compiler('cpp')
 
 simde_neon_families = [
+  'aba',
   'abd',
+  'abdl',
   'abs',
   'add',
   'addl',
