meson, cmake: add -DSIMDE_FAST_MATH to C/C++ flags on ICC
ICC enables unsafe optimizations by default; to get precise results
you have to pass -fp-model=precise (or a few other possible values).
However, unlike GCC and Clang, there doesn't seem to be any way to
determine whether the compiler is using fast or precise math.

This patch is only about the tests; we still assume precise math in
the code, but since most people building with ICC will be using fast
math that's what we'll test.  The other possibility would have been
to add -fp-model=precise to the flags, but that seemed a slightly
worse "solution" to me.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -87,6 +87,10 @@ endif()
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OPENMP_SIMD_FLAGS}")
 
+if("${CMAKE_C_COMPILER_ID}" STREQUAL "Intel")
+  add_definitions(-DSIMDE_FAST_MATH)
+endif()
+
 aux_source_directory("arm/neon" ARM_NEON_SOURCES_C)
 list(REMOVE_ITEM ARM_NEON_SOURCES_C "arm/neon/run-tests.c")
 list(REMOVE_ITEM ARM_NEON_SOURCES_C "arm/neon/skel.c")
